# untis-py

./: .gitignore  README.md  _setup.py  api.py  flake.nix  gui.py  install.sh  lesson_info.ui  login.ui  main.py  mainwindow.ui  pyproject.toml  python-dateutil.nix  requirements.txt  setup.cfg  setup.py  shell.nix  untis-py.desktop  web_utils.py  webuntis.nix
src/untis_py/: api.py  gui.py  main.py  web_utils.py
untis_py/: __init__.py  api.py  gui.py  main.py  tui.py  web_utils.py
