[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "untis-py"
version = "1.0.3"
authors = [
  { name="I-koehler", email="" },
]
description = "Python binding for the WebUntis platform"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/l-koehler/untis-py"
Issues = "https://github.com/l-koehler/untis-py/issues"