[project]
name = "untis_py"
version = "1.1.0"
description = "WebUntis Desktop App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webuntis>=0.1",
    "pyqt6>=6.5",
    "python-dateutil>=2.9"
]

[project.scripts]
untis = "untis_py:main.main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
