[metadata]
name = untis-py
version = 1.0.3
platforms = cygwin, win32
description = "Python binding for the WebUntis platform"
classifiers =
    Framework :: win32
    Programming Language :: Python :: 3


[project]
name = untis-py
requires-python = ">=3.9"

[options]
zip_safe = False
include_package_data = True
install_requires = file: requirements.txt
packages = find:
package_dir =
    =src

[options.packages.find]
where = src


[options.extras_require]




